model training third iteration

--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -421,8 +421,9 @@
     "\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "\n",
+    "# StandardScaler()--> performs scaling of the data (mean = 0 and std = 1)\n",
     "numeric_transformer = StandardScaler()\n",
+    "# OneHotEncoder()---> Performs encoding of columns to 0 and 1\n",
     "oh_transformer = OneHotEncoder()\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
@@ -650,22 +651,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.7852\n",
-      "- Mean Absolute Error: 6.1800\n",
-      "- R2 Score: 0.7509\n",
+      "- Root Mean Squared Error: 7.8584\n",
+      "- Mean Absolute Error: 6.1850\n",
+      "- R2 Score: 0.7462\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3147\n",
-      "- Mean Absolute Error: 1.8344\n",
-      "- R2 Score: 0.9762\n",
+      "- Root Mean Squared Error: 2.3241\n",
+      "- Mean Absolute Error: 1.8357\n",
+      "- R2 Score: 0.9760\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9788\n",
-      "- Mean Absolute Error: 4.6213\n",
-      "- R2 Score: 0.8531\n",
+      "- Root Mean Squared Error: 6.0263\n",
+      "- Mean Absolute Error: 4.6776\n",
+      "- R2 Score: 0.8508\n",
       "===================================\n",
       "\n",
       "\n",
@@ -697,14 +698,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7551\n",
-      "- Mean Absolute Error: 4.7151\n",
-      "- R2 Score: 0.8531\n",
+      "- Root Mean Squared Error: 5.7841\n",
+      "- Mean Absolute Error: 4.7187\n",
+      "- R2 Score: 0.8516\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0395\n",
-      "- Mean Absolute Error: 4.6308\n",
-      "- R2 Score: 0.8501\n",
+      "- Root Mean Squared Error: 6.1146\n",
+      "- Mean Absolute Error: 4.7755\n",
+      "- R2 Score: 0.8464\n",
       "===================================\n",
       "\n",
       "\n"
@@ -811,19 +812,19 @@
        "      <td>0.880345</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.853103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
        "      <td>0.851632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.850759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.850102</td>\n",
+       "      <td>0.846351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -843,7 +844,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.750923</td>\n",
+       "      <td>0.746218</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -853,13 +854,13 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880345\n",
-       "5  Random Forest Regressor  0.853103\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.850102\n",
+       "5  Random Forest Regressor  0.850759\n",
+       "8       AdaBoost Regressor  0.846351\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.750923"
+       "4            Decision Tree  0.746218"
       ]
      },
      "execution_count": 18,
@@ -868,6 +869,7 @@
     }
    ],
    "source": [
+    "# Print each model with R2_score value in a descending order\n",
     "pd.DataFrame(list(zip(model_list, r2_list)), columns=['Model Name', 'R2_Score']).sort_values(by=[\"R2_Score\"],ascending=False)"
    ]
   },
